Add functioning countdown

--- a/index.html
+++ b/index.html
@@ -39,6 +39,39 @@
 
   <section class='countdown'>
     <div class='container'>
+      <article id='days'>
+        <p>
+          <span>9</span>
+          <span>9</span>
+        </p>
+        <h5>days</h5>
+      </article>
+
+      <article id='hours'>
+        <p>
+          <span>9</span>
+          <span>9</span>
+        </p>
+        <h5>hours</h5>
+      </article>
+
+      <article id='minutes'>
+        <p>
+          <span>9</span>
+          <span>9</span>
+        </p>
+        <h5>minutes</h5>
+      </article>
+
+      <article id='seconds'>
+        <p>
+          <span>9</span>
+          <span>9</span>
+        </p>
+        <h5>seconds</h5>
+      </article>
+
+
     </div>
   </section>
 
@@ -172,6 +205,6 @@
   </div>
 
 
-  <script src="js/app.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
