Add proper links

--- a/index.html
+++ b/index.html
@@ -13,24 +13,25 @@
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
+
 </head>
 
 <body class='home'>
   <header>
     <div class='container'>
-      <a id="apply" href="#">
+      <a id="apply" href="http://sutd.edu.sg/apply">
         <i class="fa fa-download fa-lg"></i>
         Apply to SUTD
       </a>
       <section class='main-menu'>
         <div class='logos'>
-          <img src='assets/images/main-logo.png' />
+          <a href='index.html'><img src='assets/images/main-logo.png' /></a>
         </div>
         <nav class='main-menu'>
           <ul>
-            <li><a>Community</a></li>
-            <li><a>About</a></li>
-            <li><a>Support</a></li>
+            <li><a href="http://www.sutd.edu.sg/Campus-Life">Community</a></li>
+            <li><a href="http://www.sutd.edu.sg/Education/Unique-Academic-Structure">About</a></li>
+            <li><a href="http://www.sutd.edu.sg/About-Us/Contact-Us">Support</a></li>
           </ul>
         </nav>
       </section>
