--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <title>SUTD Orientation 2017: The Grid</title>
   <meta name="description" content="The Grid">
     <meta name="author" content="Singapore University of Technology &amp; Design">
+  <meta name='viewport' content='width=device-width'>
 
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
   <link rel="stylesheet" href="style.css">
 
   <!--[if lt IE 9]>
@@ -81,8 +83,8 @@
       <p class='breadcrumbs'>All Games > Best Games > Orientation Games</p>
       <h1>SUTD Orientation 2017: The Grid</h1>
       <div class='content'>
-        <img src='assets/images/gameplay.png' />
-        <div>
+        <div class='left'><img src='assets/images/gameplay.png' /></div>
+        <div class='right'>
           <img src="assets/images/game-logo.png" />
           <p class='info'>Enter The Grid and carve out a path for yourself in the intense multi-pillared system of the SUTD curriculum!</p>
           <div class='user-reviews'>
